--- a/Pricing.html
+++ b/Pricing.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Examripper - Pricing</title>
+    <title>Nohli - Pricing</title>
     <meta name="description"
-        content="Choose your perfect Examripper plan. Get instant access to all educational platforms with our affordable pricing options." />
+        content="Best calculator got your exams and assignments get answers of any complex problem." />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="public/logo.png" />
     </head>
 
 <body>
