--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <meta name="description"
         content="Nohli Calculators help you stay discreet and undetected while getting instant AI answers powered by ChatGPT 5 Stop stressing in school and boost your GPA. Buy now!." />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="public/logo.png" />
     </head>
 
 <body>
