--- a/Pricing.html
+++ b/Pricing.html
@@ -114,8 +114,7 @@
                     <div class="pricing-card-header">
                         <h3>2 Mega Pixel Camera Calculator w/ChatGpt</h3>
                         <p class="pricing-description">The 2MP Camera Calculator uses a simple camera to scan worksheets
-                            and equations, Then sends the image to OpenAI's API for clear step-by-step answers. Just
-                            take a picture and wait your answers.</p>
+                            and equations, Then sends the image to OpenAI's API for clear step-by-step answers.</p>
                     </div>
 
                     <div class="pricing-price">
@@ -189,6 +188,99 @@
             </div>
         </div>
     </section>
+
+    <section class="faq" id="FAQ">
+            <div class="faq-container">
+                <div class="faq-header">
+                    <h2 class="faq-title">Frequently Asked Questions</h2>
+                    <p class="faq-description">
+                        Straightforward answers to frequently asked questions.
+                    </p>
+                </div>
+
+                <div class="faq-list">
+                    <div class="faq-item">
+                        <button class="faq-question">
+                            <span>What subjects does Nohli support?</span>
+                            <span class="faq-icon">+</span>
+                        </button>
+                        <div class="faq-answer">
+                            <p>Nohli CalGpt supports multiple subjects including:</p>
+                            <ul>
+                                <li>Maths</li>
+                                <li>Science Academy</li>
+                                <li>Geometry</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="faq-item">
+                        <button class="faq-question">
+                            <span>How does Nohli ensure accuracy?</span>
+                            <span class="faq-icon">+</span>
+                        </button>
+                        <div class="faq-answer">
+                            <p>Nohli uses advanced recent ChatGpt AI to provide highly accurate answers. It is improved
+                                to maintain accuracy rates above 95%.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item">
+                        <button class="faq-question">
+                            <span>Is Nohli detectable by teachers or school systems?</span>
+                            <span class="faq-icon">+</span>
+                        </button>
+                        <div class="faq-answer">
+                            <p>Nohli is designed to be completely undetectable. Cannot be seen by teachers.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item">
+                        <button class="faq-question">
+                            <span>Can I customize how Nohli CalGpt by opening it?</span>
+                            <span class="faq-icon">+</span>
+                        </button>
+                        <div class="faq-answer">
+                            <p>No.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item">
+                        <button class="faq-question">
+                            <span>What payment methods are accepted for purchasing Nohli?</span>
+                            <span class="faq-icon">+</span>
+                        </button>
+                        <div class="faq-answer">
+                            <p>We accept all major credit cards (Visa, MasterCard, American Express), PayPal for maximum
+                                convenience.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item">
+                        <button class="faq-question">
+                            <span>Is there a trial version available before purchasing?</span>
+                            <span class="faq-icon">+</span>
+                        </button>
+                        <div class="faq-answer">
+                            <p>Yes! We offer a 3-day free trial so you can experience Nohli's capabilities before
+                                committing to a subscription.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item">
+                        <button class="faq-question">
+                            <span>How do I get started with Nohli after purchasing?</span>
+                            <span class="faq-icon">+</span>
+                        </button>
+                        <div class="faq-answer">
+                            <p>After purchase, you'll receive an email with download instructions. Simply install the
+                                browser extension, log in with your credentials, and you're ready to start using Nohli!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     <footer id="footer">
         <div class="footer-background">
